feat: Search service with mapper